# --ThinkAlike--

./: .editorconfig  .env.example  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlintignore  .markdownlintrc  .pre-commit-config.yaml  1  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  COPILOT_PROMPT.md  DIRECTORY_STRUCTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_STATUS_REPORT.md  README.md  README.md.orig  README_local_backup.md  _fixed.md  ai_application_developer.py  cleanup_repo_root.sh  collect_failed_runs.sh  commands.sh  complete_project_tree.txt  coverage.xml  create_correct_workflows.sh  debug_validation.py  direct_fix_workflows.sh  direct_workflow_fix.py  directly_fix_workflow_files.sh  docker-compose.yml  documentation_sovereignty  emergency_activate.sh  emergency_workflow_fix.py  ethical_validation_report.txt  file_changes.txt  fix-all.sh  fix_all_workflows.py  fix_docs.ps1  (+48 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: COPILOT_INSTRUCTIONS.md  copilot-instructions.md  dependabot.yml  fix_markdown_lint.py  repository-settings.yml
.github/config/: repository-settings.yml
.github/copilot/: challenge_examples.md  eos_lumina_persona.md
.github/disabled_workflows/: ci.yml
.github/hooks/: pre-commit
.github/scripts/: # Execute the script to fix all problema.sh  analyze_validation_output.py  clean_duplicate_repo.py  cleanup_duplicate_repos.py  cleanup_workflows.py  create_valid_workflows.py  direct_fix_workflows.py  direct_workflow_writer.py  emergency_create_workflows.sh  exact_workflow_format_fix.py  fix_corrupted_files.py  fix_markdown.py  fix_markdown_lint.py  fix_null_bytes.py  fix_null_bytes_aggressive.py  fix_null_bytes_binary.py  fix_readme_badges.py  fix_repo_references.py  fix_repository_references.py  fix_specific_workflows.sh  fix_test_files.py  fix_validation_issues.py  fix_validator.py  fix_workflow_triggers.py  force_fix_workflows.py  inspect_workflow_validator.py  nuclear_fix_workflows.sh  nuclear_workflow_fix.sh  reverse_engineer_workflows.sh  setup_test_environment.py  simple_validator.py  simple_workflow_validator.py  validate_workflows.py  verify_fixed_workflows.py  verify_on_section.py  verify_test_files.py  workflow_validator.py
.github/workflow_templates/: standard_workflow.yml  workflow_generator.sh
.github/workflows/: backend-ci.yml  backend.yml  backend_ci.yml  build-and-test.yml  cd.yml  ci.yml  ci.yml.bak  cleanup.yml  consolidated-ci.yml  deploy.yml  deploy_to_gh_pages.yml  doc_sovereignty.yml  docker_build.yml  docs-validation.yml  docs.yml  docs.yml.save  docs_ci.yml  documentation.yml  filename.yml  fixed_consolidated-ci.yml  fixed_deploy.yml  fixed_deploy_to_gh_pages.yml  fixed_documentation.yml  fixed_run-tests.yml  fixed_settings.yml  frontend.yml  frontend_ci.yml  lint-workflows.yml  main.yml  master_reference.md  name: Docs Lint.yml  name: Frontend CI.yml  requirements.txt  run-tests.yml  settings.yml  some-file.yml  test.yml  test_and_deploy.yml  unified-workflow.yml  update_docs.yml  (+2 more)
.github/workflows-backup/: cd.yml  ci.yml  deploy.yml  docs.yml  filename.yml  test.yml  update_docs.yml
api/: agent.py
app/: README.md  database.py
app/models/: __init__.py  user.py
app/routes/: __init__.py  agents.py  users.py
backend/: __init__.py  alembic.ini  ci.yml  fix_missing_content.py  fix_project.py  init_db.py  logfile  main.py  requirements.txt  routes.json  run.py  schema.sql  setup.py
backend/agents/: architekt.py  aurora.py  code_developer_agent.py  ethica.py  guide_system.py  lexicon.py  nexus.py  novo.py  test_writer_agent.py  visio.py
backend/alembic/: env.py
backend/algorithms/: __init__.py  matching_algorithm.py
backend/api/: __init__.py  auth_api.py  community_api.py  events_api.py  family_tree_api.py  friend_maps_api.py  location_api.py  matching_api.py  routes.py
backend/app/: __init__.py  main.py
backend/auth/: auth_handler.py
backend/core/: __init__.py
backups/: README.md
config/: .gitconfig  .markdownlint.json  .markdownlintrc  .pre-commit-config.yaml
config/python/: pyproject.toml
core/: contributing_detailed.md
data/: README.md
diagnostics/: workflow_validation.txt
docs/: CONTRIBUTOR_FAQ.md  COPILOT_PROMPT.md  PROJECT_STATUS_REPORT.md  contributing-quick.md  contributing.md  contributing_overview.md  contributor_faq.md  index.html  index.md  knowledge-index.txt  mkdocs.yml  project_status.md  readme.md  roadmap.md  style.css
frontend/: .env.example  jest.config.js  package-lock.json  package.json  setup-frontend-env.sh  tsconfig.json
infrastructure/: main.tf
notebooks/: installation_issue.ipynb
project_guides/: contributing.md  developer_workflow.md
public/: index.html
requirements/: requirements.txt
scripts/: README.md  backup_project.py  check_markdown.py  clean_files.py  clean_null_bytes.py  cleanup_workflows.py  cleanup_workflows.sh  commands.sh  compare_branch_files.sh  create_files.py  diagnose_workflows.py  disable_duplicate_workflows.sh  docs_preprocessor.py  documentation_sovereignty.py  emergency_fix_workflow.sh  establish_sovereignty.sh  fix-broken-links.js  fix-markdown-files.sh  fix-markdown-lint.js  fix-markdown-lint.sh  fix-markdown-linting.js  fix-markdown-visual-issues.js  fix: resolve workflow issues and improve.md  fix_all_workflows.py  fix_doc_links.py  fix_documentation_links.py  fix_markdown_lint.py  fix_missing_content.py  fix_requirements.py  fix_resolve_workflow_issues_and_improve.md  fix_terminal.sh  fix_test_environment.py  fix_test_specific.py  fix_tests.py  fix_workflow_pip_commands.py  fix_workflows.sh  fix_workflows_all_branches.sh  generate_files.py  generate_simple_erd.py  init_db.py  (+36 more)
site/: 404.html  search.html  sitemap.xml
src/: api_generator.py  feedback_analysis.py  init_db.py  main.py  manage.py  verify_dependencies.py
temp_review/: contributing_quick.md
tests/: .coverage  test_ai_tools.py  test_basic.py  test_doc_parser.py  test_ethical_compliance.py  test_example.py  test_location_services.js  test_minimal.py  test_value_based_matcher.py
tools/: run_ai_transparency_log.py
(+689 files in other folders)
